# jpstat

./: .gitignore  LICENSE  README.md  pyproject.toml
estat/: __init__.py  api.py  config.py  core.py  menu.py
estat/api/: estat.py
estat/io/: data.py  estat.py
estat/util/: clean.py  validate.py
jpstat/: __init__.py  config.py  version.py
jpstat/estat/: __init__.py  api.py  core.py  menu.py
jpstat/estat/util/: validate.py
jpstat/estatFile/: __init__.py  core.py  scrape.py
jpstat/util/: download.py  io.py
tests/: test_estat.py
