[tool.poetry]
name = "jpstat"
version = "0.0.2"
description = "A python library for accessing official statistics of Japan."
authors = ["Xuanli Zhu <akaguro.koyomi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alalalalaki/jpstat"
repository = "https://github.com/alalalalaki/jpstat"
keywords = ["estat", "japan", "statistics", "economics", "data"]



[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
requests = "^2.0"
requests_html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
